styles/css/breadcrumb/vtex.breadcrumb.css
.homeLink::before,
.link {
    content        : 'home';
    font-family    : "Nunito Sans", sans-serif;
    font-size      : 14px;
    font-weight    : 400;
    color          : #000000;
    line-height    : 17px;
    text-decoration: underline;
    text-transform : lowercase;
    padding        : 0;
}

.link:last-child {
    text-decoration: unset;
}

.homeIcon {
    display: none;
}

.caretIcon {
    display: none;
}

.arrow::before {
    display     : inline-block;
    content     : "/";
    color       : #000000;
    margin-right: 3px;
}

:global(.vtex-flex-layout-0-x-flexRowContent--general__results--breadcrumb) .container {
    margin-left: 0px;
}

